--- a/Lesson_8_Online_shop/templates/add_product.html
+++ b/Lesson_8_Online_shop/templates/add_product.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Добавление/обновление количества товара</title>
+    <title>Добавление товара</title>
 </head>
 <body>
     <h3>Категории в базе:</h3>
